fixed z-index issues

--- a/frontend/src/css/CartPreview.css
+++ b/frontend/src/css/CartPreview.css
@@ -72,7 +72,7 @@
     right: 0.1vw;
     bottom: 0.1vh;
     position: fixed;
-    z-index: 2;
+    z-index: 1;
 }
 
 .item-description {
