--- a/frontend/src/css/CartSummary.css
+++ b/frontend/src/css/CartSummary.css
@@ -203,7 +203,7 @@
         position: fixed;
         background-color: rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(4px);
-        z-index: 1;
+        z-index: 2;
         top: 0;
         left: 0;
     }
@@ -219,7 +219,7 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        z-index: 2;
+        z-index: 3;
         padding: 30px;
     }   
 
